[project]
name = "cphos-qdb"
version = "0.2.2"
description = "Python SDK for CPHOS Question Bank API (bot account)"
readme = "README.md"
authors = [
    { name = "gameswu", email = "wuhx24@mails.tsinghua.edu.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "black>=24.0",
    "mike>=2.1.3",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
